// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <div
      aria-describedby="name-error-text"
      className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        className="MuiFormLabel-root-12 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9"
        data-shrink={false}
        htmlFor="name-error"
      >
        Escrever comentário
      </label>
      <div
        className="MuiInputBase-root-32 MuiInput-root-19 MuiInput-underline-23 MuiInputBase-formControl-33 MuiInput-formControl-20 MuiInputBase-multiline-40 MuiInput-multiline-25"
        onClick={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      >
        <div
          className="MuiTextarea-root-49"
        >
          <textarea
            aria-hidden="true"
            className="MuiTextarea-textarea-50 MuiTextarea-shadow-51"
            readOnly={true}
            rows="1"
            tabIndex={-1}
            value=""
          />
          <textarea
            aria-hidden="true"
            className="MuiTextarea-textarea-50 MuiTextarea-shadow-51"
            defaultValue={undefined}
            readOnly={true}
            rows={1}
            tabIndex={-1}
            value=""
          />
          <textarea
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiTextarea-textarea-50 MuiInputBase-input-42 MuiInput-input-27 MuiInputBase-inputMultiline-44 MuiInput-inputMultiline-29"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name="text"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={false}
            rows={1}
            style={
              Object {
                "height": 19,
              }
            }
            value=""
          />
        </div>
      </div>
      <p
        className="MuiFormHelperText-root-52"
        id="name-error-text"
      />
    </div>
  </div>
  <div
    style={
      Object {
        "textAlign": "right",
      }
    }
  >
    <button
      className="MuiButtonBase-root-86 MuiButton-root-60 MuiButton-contained-71 MuiButton-containedPrimary-72 MuiButton-raised-74 MuiButton-raisedPrimary-75"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-61"
      >
        Enviar comentário
      </span>
      <span
        className="MuiTouchRipple-root-89"
      />
    </button>
  </div>
</form>
`;

exports[`with error renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <div
      aria-describedby="name-error-text"
      className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        className="MuiFormLabel-root-12 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9"
        data-shrink={false}
        htmlFor="name-error"
      >
        Escrever comentário
      </label>
      <div
        className="MuiInputBase-root-32 MuiInput-root-19 MuiInput-underline-23 MuiInputBase-formControl-33 MuiInput-formControl-20 MuiInputBase-multiline-40 MuiInput-multiline-25"
        onClick={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      >
        <div
          className="MuiTextarea-root-49"
        >
          <textarea
            aria-hidden="true"
            className="MuiTextarea-textarea-50 MuiTextarea-shadow-51"
            readOnly={true}
            rows="1"
            tabIndex={-1}
            value=""
          />
          <textarea
            aria-hidden="true"
            className="MuiTextarea-textarea-50 MuiTextarea-shadow-51"
            defaultValue={undefined}
            readOnly={true}
            rows={1}
            tabIndex={-1}
            value=""
          />
          <textarea
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiTextarea-textarea-50 MuiInputBase-input-42 MuiInput-input-27 MuiInputBase-inputMultiline-44 MuiInput-inputMultiline-29"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name="text"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={false}
            rows={1}
            style={
              Object {
                "height": 19,
              }
            }
            value=""
          />
        </div>
      </div>
      <p
        className="MuiFormHelperText-root-52"
        id="name-error-text"
      />
    </div>
  </div>
  <div
    style={
      Object {
        "textAlign": "right",
      }
    }
  >
    <button
      className="MuiButtonBase-root-86 MuiButton-root-60 MuiButton-contained-71 MuiButton-containedPrimary-72 MuiButton-raised-74 MuiButton-raisedPrimary-75"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="submit"
    >
      <span
        className="MuiButton-label-61"
      >
        Enviar comentário
      </span>
      <span
        className="MuiTouchRipple-root-89"
      />
    </button>
  </div>
  <div
    style={
      Object {
        "padding": 20,
        "textAlign": "center",
      }
    }
  >
    <h5
      className="MuiTypography-root-96 MuiTypography-h5-112 MuiTypography-colorError-130"
    >
      foo
    </h5>
  </div>
</form>
`;
